# openglshowcase

./: .gitignore  CMakeLists.txt  README.md  nvim-setup.lua
.devcontainer/: Dockerfile  devcontainer.json
include/glad/: glad.h
include/lib/: Camera.hpp  Object.hpp  Rectangle.hpp  System.hpp  Triangle.hpp  general.hpp  imgui.hpp  types.hpp
src/: Camera.cpp  Object.cpp  Rectangle.cpp  Triangle.cpp  general.cpp  glad.c  imgui.cpp  input.cpp  main.cpp  types.cpp
src/lib/: general.cpp  imgui.cpp  input.cpp  types.hpp
src/lib/tests/: triangle.cpp
